objects/Event_Registration__c.object
<CustomObject>
    <fields>
        <fullName>Attendee_Company__c</fullName>
        <formula>Contact__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attendee Company</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attendee_Mailing_Address__c</fullName>
        <formula>Contact__r.MailingStreet</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attendee Mailing Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attendee_Mailing_City__c</fullName>
        <formula>Contact__r.MailingCity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attendee Mailing City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attendee_Mailing_Country__c</fullName>
        <formula>Contact__r.MailingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attendee Mailing Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attendee_Mailing_State__c</fullName>
        <formula>Contact__r.MailingState</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attendee Mailing State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attendee_Mailing_Zip_Code__c</fullName>
        <formula>Contact__r.MailingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attendee Mailing Zip Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attendee_Mobile_Phone__c</fullName>
        <formula>Contact__r.MobilePhone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attendee Mobile Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attendee_Office_Phone__c</fullName>
        <formula>Contact__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attendee Office Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Registrations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Event_Expense__c</fullName>
        <label>Event Expense</label>
        <referenceTo>Event_Expense__c</referenceTo>
        <relationshipName>Event_Registrations</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <label>Event</label>
        <referenceTo>Event__c</referenceTo>
        <relationshipName>Registrations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Name_on_Badge__c</fullName>
        <description>Name to be printed on Event Badge</description>
        <inlineHelpText>Name to be printed on Event Badge</inlineHelpText>
        <label>Name on Badge</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Track_of_Interest__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Primary Event Track that the contact is interested in.</description>
        <inlineHelpText>Primary Event Track that the contact is interested in.</inlineHelpText>
        <label>Primary Track of Interest</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Event__c</field>
                <operation>equals</operation>
                <valueField>Track__c.Event__c</valueField>
            </filterItems>
            <infoMessage>Please select a Track from the selected event</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Track__c</referenceTo>
        <relationshipName>Registrations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Registration_Type__c</fullName>
        <label>Registration Type</label>
        <picklist>
            <picklistValues>
                <fullName>Paid</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Complementary - Vendor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complementary - Prospect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complementary - Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complementary - Speaker</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Title_on_Badge__c</fullName>
        <description>Title to be printed on Badge</description>
        <inlineHelpText>Title to be printed on Badge</inlineHelpText>
        <label>Title on Badge</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Event Request</label>
    <nameField>
        <displayFormat>REG-{0000000}</displayFormat>
        <label>Registration Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>